--- a/Exercicios/desafio.012/index.html
+++ b/Exercicios/desafio.012/index.html
@@ -23,7 +23,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="imagem01">
     <p>
         Quem assiste o sol se por <br>
         Faz uma reflexão <br>
@@ -54,7 +54,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="imagem02">
     <p>
         A noite é desilusão <br>
         Quando a luz do sol se ofusca <br>
@@ -85,7 +85,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="imagem03">
     <p>
         Sem ter como reclamar <br>
         O sol se encontra escondido <br>
