--- a/Exercicios/ex.023/tabela002.html
+++ b/Exercicios/ex.023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
@@ -21,8 +22,24 @@
             text-align: right;
         }
         thead, tfoot {
-            background-color: rgb(147, 145, 145);
+            background-color: rgb(61, 59, 59);
             color: white;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: rgb(61, 59, 59);
+
+        }
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgrey;
+        }
+        tbody > tr:nth-child(2n) {
+
+            background-color: lightgray;
         }
 
     </style>
@@ -33,8 +50,8 @@
     <caption>Pupulação das Unidades Federativas</caption>
     <thead>
         <tr>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col">População</th>
         </tr>
     </thead>
     <tbody>
@@ -69,10 +86,21 @@
     </tbody>
     <tfoot>
         <tr>
-            <th>Total de Habitantes</th>
+            <th scope="row">Total de Habitantes</th>
             <td class="num"><strong>00000000</strong></td>
         </tr>
     </tfoot>
    </table>
+    <p>Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi!Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.Não sou faixa preta cumpadi, sou preto inteiris, inteiris.</p>
+
+    <p>Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.Delegadis gente finis, bibendum egestas augue arcu ut est.</p>
+
+    <p>In elementis mé pra quem é amistosis quis leo.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus.</p>
+
+    <p>Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.Quem manda na minha terra sou euzis!Diuretics paradis num copo é motivis de denguis.Mé faiz elementum girarzis, nisi eros vermeio.</p>
+
+    <p>Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis!Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Leite de capivaris, leite de mula manquis sem cabeça.</p>
+
+    <p>Quem num gosta di mim que vai caçá sua turmis!Cevadis im ampola pa arma uma pindureta.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.</p>
 </body>
 </html>
