--- a/Exercicios/ex.025/form007.html
+++ b/Exercicios/ex.025/form007.html
@@ -7,7 +7,7 @@
     <title>Formulários</title>
 </head>
 <body>
-    <form action="" method="get" autocomplete="on">
+    <form action="" method="post" autocomplete="on">
         <p>
             <label for="iest">Estado</label>
             <select name="est" id="iest">
@@ -31,6 +31,8 @@
             </datalist>
 
         </p>
+        <label for="imsg">Mensagem</label><br>
+        <textarea name="msg" id="imsg" cols="35" rows="20"></textarea>
 
         <p>
             <input type="submit" value="Enviar">
