--- a/Exercicios/ex.026/imagens/mq001/index.html
+++ b/Exercicios/ex.026/imagens/mq001/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screem">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
+    <header>
+        <h1>Noticias</h1>
+        <menu>
+            <ul>
+                <li>Esporte</li>
+                <li>Música</li>
+                <li>Tecnologias</li>
+                <li>Politica</li>
+            </ul>
+
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Aprendendo a usar media Queries</h2>
+            <p>
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore enim hic delectus placeat repudiandae architecto nemo fuga odit eum recusandae cumque, aliquid ab voluptatum facere inventore facilis alias dolorum rerum. 
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quis dicta temporibus nam similique quisquam expedita odit excepturi ducimus ea minima atque tempora perferendis, obcaecati aspernatur et deleniti suscipit eos.
+            </p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, alias sunt, adipisci cupiditate, eius dolorem a sit sapiente cum ratione inventore commodi nam cumque eum dolor distinctio quos delectus et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis cupiditate obcaecati atque ipsa omnis optio possimus odio beatae recusandae voluptatum, vitae architecto! Molestias repellendus animi obcaecati repellat molestiae, exercitationem aliquam.
+
+            </p>
+
+            
+        </article>
+    </main>
     
 </body>
 </html>
