--- a/Exercicios/ex.026/mq005/index.html
+++ b/Exercicios/ex.026/mq005/index.html
@@ -7,8 +7,9 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
-<body>
+<body onrisize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <span id="burger" class="material-icons md-24" onclick="clickMenu()">menu</span>
@@ -36,6 +37,14 @@
         </article>
     </main>
     <script>
+        function mudouTamanho(){
+            if (window.innerWidth >= 768) {
+                menu.style.display = 'block'
+            } else {
+                menu.style.display = 'none'
+            }
+            
+        }
         function clickMenu(){
             if (menu.style.display == 'block') {
                 menu.style.display = 'none'
